--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
     <li>Zidane</li>
     <li>Beckham</li>
     <li>Maradona</li>
+    <li>pele</li></>
     
   </ol>
 
   <!-- External Image from Pexels -->
   <h2>External Image</h2>
-  <img src="image.jpg" altc:\Users\Administrator\Pictures\img.jpg="Nature Image from Pexels" width="500">
+  <img src="sun.jpeg" altc:\Users\Administrator\Pictures\img.jpg="Nature Image from Pexels" width="500">
 
   <!-- Table of Contacts -->
   <h2>Contact Table</h2>
