--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <li>Zidane</li>
     <li>Beckham</li>
     <li>Maradona</li>
-    <li>pele</li></>
+    <li>pele</li> 
+    <li>ronaldinho</li>
     
   </ol>
 
